# esd-services-api-client

./: .pylintrc  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: black.yaml  build.yaml  deploy-azure-artifacts.yaml  dev-release.yaml  publish.yaml  release.yaml
esd_services_api_client/: __init__.py
esd_services_api_client/arcane/: __init__.py  _api_versions.py  _connector.py  _models.py
esd_services_api_client/beast/: __init__.py  _auth.py  _connector.py  _models.py
esd_services_api_client/beast/v2/: _connector.py
esd_services_api_client/beast/v3/: _connector.py
esd_services_api_client/boxer/: README.md  __init__.py  _auth.py  _base.py  _connector.py  _helpers.py  _models.py
esd_services_api_client/crystal/: __init__.py  _api_versions.py  _connector.py  _models.py
esd_services_api_client/nexus/: README.md
esd_services_api_client/nexus/abstractions/: algrorithm_cache.py  logger_factory.py  metrics_provider_factory.py  nexus_object.py  socket_provider.py
esd_services_api_client/nexus/algorithms/: __init__.py  _baseline_algorithm.py  _remote_algorithm.py  distributed.py  forked_algorithm.py  minimalistic.py  recursive.py
esd_services_api_client/nexus/core/: app_core.py  app_dependencies.py  serialization_format.py  serializers.py
esd_services_api_client/nexus/exceptions/: __init__.py  _nexus_error.py  input_reader_error.py  startup_error.py
esd_services_api_client/nexus/input/: __init__.py  _functions.py  input_processor.py  input_reader.py  payload_reader.py
esd_services_api_client/nexus/modules/: __init__.py  astra_client_module.py  mlflow_module.py
esd_services_api_client/nexus/telemetry/: recorder.py  user_telemetry_recorder.py
tests/: test_arcane_connector.py  test_beast_connector.py  test_crystal_connector.py  test_job_socket.py
tests/beast/: job_request.json
