[tool.poetry]
name = "esd-services-api-client"
version = "0.0.0"
description = "Python clients for ESD services"
authors = ["ECCO Sneaks & Data <esdsupport@ecco.com>"]
maintainers = ['GZU <gzu@ecco.com>', 'JRB <ext-jrb@ecco.com>', 'VISA <visa@ecco.com>']
readme = "README.md"
license = 'Proprietary'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
proteus = { version="^1.3.0,<1.8.0", extras = ["azure"] } # range due to issues with similarly named pypi package
dataclasses-json = "~0.5.7"
pycryptodome = "~3.15"
azure-identity = { version = "~1.7", optional = true }
pyjwt = "~2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pylint = "^2.12"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12"
requests = "~2.27"
cryptography = "~36.0"
requests-mock = "~1.10"
locust = "~2.14.2"

[[tool.poetry.source]]
name = "azops"
url = "https://pkgs.dev.azure.com/eccoSneaksAndData/_packaging/eccoSneaksAndData/pypi/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
azure = [
    'azure-identity'
]
